<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App strings -->
    <string name="app_name">Task Timer</string>
    <string name="service_label">Main Service</string>
    <string name="service_description">Controls storing and retrieving task data, and the timer.</string>
    
    
    <!-- Menu strings -->
    <string name="menu_new_task">New Task</string>
    <string name="menu_new_group">New Group</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
    
    
    <!-- Dialog strings -->
    <string name="dialog_restart_title">Restart Needed</string>
    <string name="dialog_restart_message">A complete restart of Task Timer is required for this change to fully take effect.</string>
    <string name="dialog_restart_button_now">Restart Now</string>
    <string name="dialog_restart_button_later">Restart Later</string>
    
    
    <!-- Preference strings -->
    <string name="pref_generalSettings">General Settings</string>
    <string name="pref_taskSettings">Task Settings</string>
    <string name="pref_performanceSettings">Performance Settings</string>
    
    <string name="pref_theme">Theme</string>
    <string name="pref_theme_default">2</string>
    <string-array name="pref_theme_entries">
        <item>Dark</item>
        <item>Light</item>
        <item>Light with dark action bar</item>
    </string-array>
    <string-array name="pref_theme_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    
    <string name="pref_timeFormat">Time Format</string>
    <string name="pref_timeFormat_default">0</string>
    <string-array name="pref_timeFormat_entries">
        <item>System Default</item>
        <item>12-hour</item>
        <item>24-hour</item>
    </string-array>
    <string-array name="pref_timeFormat_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    
    <string name="pref_history_title">History tracking</string>
    <string name="pref_history_default">true</string>
    <string name="pref_history_summary_on">Task history will be tracked</string>
    <string name="pref_history_summary_off">Task history won\'t be tracked</string>
    
    <string name="pref_overtime_title">Overtime</string>
    <string name="pref_overtime_default">false</string>
    <string name="pref_overtime_summary_on">Tasks will be able to go over their goals</string>
    <string name="pref_overtime_summary_off">Tasks won\'t be able to go over their goals</string>
    
    <string name="pref_autoPause_title">Automatic pausing at goal</string>
    <string name="pref_autoPause_default">true</string>
    <string name="pref_autoPause_summary_on">Tasks will be paused when their goals are reached</string>
    <string name="pref_autoPause_summary_off">Tasks won\'t be paused when their goals are reached</string>
    
    <string name="pref_multipleRunning_title">Multiple tasks running</string>
    <string name="pref_multipleRunning_default">true</string>
    <string name="pref_multipleRunning_summary_on">More than one task can be running at a time</string>
    <string name="pref_multipleRunning_summary_off">Only one task can be running at a time</string>
    
    <string name="pref_autosaveRate">Autosave rate</string>
    <string name="pref_autosaveRate_default">5</string>
    <string-array name="pref_autosaveRate_entries">
        <item>1 minute</item>
        <item>5 minutes (default)</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
    </string-array>
    <string-array name="pref_autosaveRate_values">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
    </string-array>
    
    <string name="pref_foregroundRate">Foreground update rate</string>
    <string name="pref_foregroundRate_default">1</string>
    <string-array name="pref_foregroundRate_entries">
        <item>1 second (default)</item>
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>15 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
    </string-array>
    <string-array name="pref_foregroundRate_values">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
    </string-array>
    
    <string name="pref_backgroundRate">Background update rate</string>
    <string name="pref_backgroundRate_default">60</string>
    <string-array name="pref_backgroundRate_entries">
        <item>1 second</item>
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>15 seconds</item>
        <item>30 seconds</item>
        <item>1 minute (default)</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
    </string-array>
    <string-array name="pref_backgroundRate_values">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>300</item>
        <item>600</item>
        <item>900</item>
    </string-array>
    
    <!--  Task strings -->
    <string name="task_name">Name</string>
    <string name="task_time">Current Time</string>
    <string name="task_goal">Goal</string>
    <string name="task_indefinite">Indefinite</string>
    <string name="task_progress">Progress</string>
    <string name="task_group">Group</string>
    <string name="task_position">Position</string>
    <string name="task_description">Description</string>
    
    <string name="task_start">Start</string>
    <string name="task_pause">Pause</string>
    
    <string name="task_new">New Task</string>
    <string name="task_add">Add Task</string>
    <string name="task_edit">Edit Task</string>
    <string name="task_save">Save Task</string>
    
    
    <!-- Group strings -->
    <string name="group_name">Name</string>
    <string name="group_position">Position</string>
    
    <string name="group_new">New Group</string>
    <string name="group_add">Add Group</string>
    <string name="group_edit">Edit Group</string>
    <string name="group_save">Save Group</string>
    
    
    <!-- Time strings -->
    <string name="time_hours">Hours</string>
    <string name="time_mins">Minutes</string>
    <string name="time_secs">Seconds</string>
    <string name="time_separator">:</string>
    
    
    <!-- Position strings -->
    <string name="position_before">Before \"%1$s\"</string>
    <string name="position_after">After \"%1$s\"</string>
    <string name="position_end">End of the list</string>
    
    
    <!-- Error strings -->
    <string name="error_serviceNotBound">The service could not be bound</string>
    
    
    <!-- General strings -->
    <string name="no_tasks">No tasks</string>
    <string name="task_goal_reached">Task \"%s\" has reached its goal</string>
    
    
    <!--  View tag IDs -->
    <item type="id" name="tag_task" />
    <item type="id" name="tag_group" />

</resources>