<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_new_task"
        android:icon="?attr/ic_new_task"
        android:orderInCategory="1"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_new_task" />
    <item
        android:id="@+id/menu_new_group"
        android:icon="?attr/ic_new_group"
        android:orderInCategory="2"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_new_group" />
    <item
        android:id="@+id/menu_settings"
        android:icon="?attr/ic_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings" />
	<item
	    android:id="@+id/menu_exit"
	    android:orderInCategory="101"
	    android:showAsAction="never"
	    android:title="@string/menu_exit" />
</menu>