<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/task_edit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/task_edit_name"
        android:hint="@string/task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
    
    <Spinner
        android:id="@+id/task_edit_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/task_group"
        android:spinnerMode="dialog" />
    
    <Spinner
        android:id="@+id/task_edit_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/task_position"
        android:spinnerMode="dialog" />
    
    <EditText
        android:id="@+id/task_edit_description"
        android:hint="@string/task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:singleLine="false" />

</LinearLayout>